--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="row mt-5">
+  <div class="col-md-6 m-auto">
+    <div class="card card-body text-center">
+      <h1><i class="fab fa-node-js fa-3x"></i></h1>
+      <p>Create an account or login</p>
+      <a routerLink="/register" class="btn btn-danger btn-block mb-2">Register</a>
+      <a routerLink="/login" class="btn btn-info btn-block">Login</a>
+    </div>
+  </div>
+</div>
