--- a/client/src/app/components/register/register.component.html
+++ b/client/src/app/components/register/register.component.html
@@ -1,1 +1,30 @@
-<p>register works!</p>
+<div class="row mt-5">
+    <div class="col-md-6 m-auto">
+      <div class="card card-body">
+        <h2 class="text-center"><i class="fas fa-user-plus mr-2"></i>Register</h2>
+        <form (submit)="onRegister()">
+          <div class="form-group">
+            <label for="name">NAME</label>
+            <input type="text" class="form-control" [(ngModel)]="name" name="name" id="name" placeholder="Enter your name">
+          </div>
+          <div class="form-group">
+            <label for="username">USERNAME</label>
+            <input type="text" class="form-control" [(ngModel)]="username" name="username" id="username" placeholder="Enter your username">
+          </div>
+          <div class="form-group">
+            <label for="email">EMAIL</label>
+            <input type="email" class="form-control" [(ngModel)]="email" name="email" id="email" placeholder="Enter your email">
+          </div>
+          <div class="form-group">
+            <label for="password">PASSWORD</label>
+            <input type="password" class="form-control" [(ngModel)]="password" name="password" id="password" placeholder="Enter your password">
+          </div>
+          <button type="submit" class="btn btn-block btn-danger text-light mt-5">Register</button>
+        </form>
+  
+        <p class="mt-3">
+          No Account? <a routerLink="/login">Login</a>
+        </p>
+      </div>
+    </div>
+  </div>
