--- a/client/src/app/components/login/login.component.html
+++ b/client/src/app/components/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class="row mt-5">
+    <div class="col-md-6 m-auto">
+      <div class="card card-body">
+        <h2 class="text-center"><i class="fa fa-sign-in mr-3"></i>Login</h2>
+         <form (submit)="onLogin()">
+             <div class="form-group">
+                 <label for="username">Username</label>
+                 <input type="text" class="form-control" [(ngModel)]="username" name="username" id="username" placeholder="Enter your username">
+             </div>
+             <div class="form-group mb-4">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" [(ngModel)]="password" name="password" id="password" placeholder="Enter your password">
+            </div>
+            <button class="btn btn-block text-light btn-danger" type="submit">Login</button>
+         </form>
+         <p class="lead mt-3">
+            No Account? <a routerLink="/register">Register</a>
+          </p>
+       
+      </div>
+    </div>
+  </div>
