--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -9,6 +9,9 @@
           <a class="nav-link" routerLink="/">Home</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/profile">Profile</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
